--- a/cie_frontend/src/Welcome/styles.css
+++ b/cie_frontend/src/Welcome/styles.css
@@ -1,19 +1,30 @@
 main {
   padding-top: 50px;
   margin: 0 auto;
-  width: 80%;
+  width: 50%;
 }
 .modules-grid {
   display: grid;
   grid-auto-rows: auto;
   grid-template-columns: repeat(auto-fill, 250px);  
-  grid-gap: 10px; 
+  grid-gap: 15px; 
+  justify-content: center;
 }
 
 .module-card {
-  border: 1px solid;
-  border-radius: 4px;
+  border: 2px solid #ff3e00;
+  border-radius: 6px;
   width: 250px;
   padding: 12px;
+  display: grid;
+
+}
+.module-card img {
+  width: 200px;
+  justify-self: center;
+}
+
+.module-card button {
+  justify-self: stretch; 
 }
 
